style.css
/* ... */
nav ul li a:hover::after {
  width: 15%;
  content: '';
  height: 6px;
  background-color: #ea4b0a;
  position: absolute;
  top: 32px;
  border-radius: 5px;
  left: 0;
}

nav ul li:last-child a {
  margin-right: 0;
}

.mobilenav-toggle {
  float: right;
  width: 20px;
  height: 20px;
  background: url(img/menuicon.png) no-repeat;
  background-size: cover;
  margin-top: 15px;
  display: none;
  cursor: pointer;
}

.mobilenav {
  display: none;
  float: none;
  position: relative;
  top: -100px;
  overflow: hidden;
  height: auto;
  width: 90%;
  margin: 0 auto;
  transition: all 1s;
}

.mobilenav ul {
  text-align: center;
  margin: 0;
  padding: 0;
}

.mobilenav li a {
  color: #fff;
  display: block;
  text-align: left;
  padding: 15px 33px;
  font-size: 25px;
  font-weight: 300;
  border-bottom: 1px solid #DB521E;
}

.displaymobilemenu {
  height: 180px;
}

.displaymobilemenu .mobilenav {
  display: block!important;
  top: 10px;
  width: 100%;
  background-color: #ef5a21;
  padding-bottom: 10px;
  z-index: 999;
  transition: all 1s;
}

.displaymobilemenu{
  height: 180px;
}

/* HERO */

.hero,
.report-hero {
  margin-top: 130px;
  padding-top: 70px;
  width: 100%;
  height: 571px;
}

.hero h1 {
  width: 40%;
  margin: 0 auto;
  font-size: 41px;
  margin-top: -13px;
}

section.hero img {
  max-width: 85%;
  height: auto;
}

.hero p {
  font-size: 19px;
  line-height: 30px;
  font-weight: 300;
  max-width: 680px;
  margin: 0 auto;
  color: #6c6c6c;
  margin-top: 20px;
}

/* Live video */

/*
.livevideo {
  width: 800px;
  margin: 30px auto;
}

.livevideocontainer {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 25px;
	height: 0;
}
.livevideocontainer iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
*/


/*REPORT*/
.report-hero {
  padding-bottom: 70px;
  height: auto;
}

.report-hero p {
  color: #fff;
  width: auto;
  padding: 10px 23%;
  font-size: 18px;
  font-weight: 300;
}

.report-hero h3 {
  color: #fff;
  font-weight: 300;
  padding-bottom: 10px;
}

.report-casestudy,
.report-analysis {
  padding: 75px calc(50% - 580px);
}

.report-casestudy {
  padding-bottom: 0;
}

.border-class {
    border-bottom: 1px solid #e4e4e4;
    padding-bottom: 75px;
}

.report-download {
  padding: 75px calc(50% - 580px);
  background: url(img/footerbg.png);
  text-align: center;
  color: #fff;
  font-size: 30px;
}

.report-download h2 {
  font-weight: 100;
  padding: 0 20px;
}

.report-casestudy p,
.report-analysis p {
  display: inline-block;
  margin: 0;
  font-size: 18px;
  line-height: 26px;
}

.report-textcont {
  display: inline-block;
  width: 45%;
  padding-right: 25px;

}

.report-analysis .report-textcont{
  padding-left: 25px;
  padding-right: 0;
  float: right;
}

.report-casestudy img,
.report-analysis img{
  display: inline-block;
  vertical-align: top;
  border-radius: 5px;
}

.report-textcont h3 span {
  color: #ef5a21;
}

.report-textcont h3 {
  font-size: 25px;
  color: #5e6a71;
}

.report-pagination {
  overflow: auto;
  padding: 60px calc(50% - 580px);
}

.previouspost {
  float: left;
  max-width: 40%;
  margin-left: 90px;
}

.nexpost {
  float: right;
  max-width: 40%;
  text-align: right;
  margin-right: 90px;
}

.previouspost a span,
.nexpost a span {
  color: #ef5a21;
  font-size: 25px;
  font-weight: 400;
}
.previouspost a,
.nexpost a {
  color: #5e6b72;
  font-size: 25px;
  position: relative;
}

.previouspost a:before,
.nexpost a:after {
  content: '\2039';
  position: absolute;
  background-color: #ef5a21;
  border-radius: 100%;
  color: #fff;
  text-align: center;
  left: -80px;
  top: 4px;
  font-size: 55px;
  width: 55px;
  font-weight: 900;
  height: 55px;
  line-height: 44px;
  transition: background .2s;
}

.previouspost a:hover:before,
.nexpost a:hover:after {
  background-color: #dc3d00;
}

.nexpost a:after {
  content: '\203A';
  left: 144px;
  top: 4px;
}

/* HOW IT WORKS */

.howitworks {
  padding: 0 calc(50% - 580px);
  padding-top: 120px;
  padding-bottom: 110px;
  position: relative;
  overflow: auto;
}

.howitworks li img {
  width: 100%;
}

.howitworks h2 {
  display: inline-block;
  background-color: #fff;
  padding: 0 20px;
  z-index: 9;
}

.howitworks ol::before {
  content: '';
  width: 100%;
  height: 1px;
  background-color: #e8e8e8;
  position: absolute;
  top: -41px;
  left: 0;
  z-index: -9;
}

/*.howitworks li::after {
  position: absolute;
  top: 167px;
  left: 21%;
  display: inline-block;
  width: 30px;
  height: 30px;
  background-color: red;
  background-image: url(img/nextarrow.png);
  content: "";
}*/

/*.howitworks li:nth-child(+2):after {
   left: 40%;
}
.howitworks li:nth-child(+3):after {
   left: 59%;
}
.howitworks li:nth-child(+4):after {
   left: 78%;
}
.howitworks li:nth-child(+5):after {
   display: none;
}*/

.howitworks ol {
  padding-top: 100px;
  list-style: none;
  position: relative;
  padding: 60px 0;
}

.howitworks li {
  display: block;
  float: left;
  width: calc(18% - 20px);
  padding: 0px 19px;
  list-style: decimal;
}

.howitworks li:before {
  display: block;
  background: aqua;
}

.howitworks li h3 {
  font-size: 24px;
  font-weight: 300;
  color: #454d51;
  height: 105px;
}

.howitworks li p {
  font-size: 17px;
  font-weight: 300;
  color: #6c6c6c;
}

.howitworks li h3:before {
  background: #0ac10a;
  display: block;
  width: 36px;
  height: 36px;
  margin: 0 auto;
  color: #FFF;
  font-size: 17px;
  font-weight: 400;
  line-height: 35px;
  border-radius: 100%;
  margin-bottom: 15px;
  border: 4px solid #f1f2f1;
}

.howitworks li:nth-child(1) h3:before {
  content: "1";
  display: block;
}

.howitworks li:nth-child(2) h3:before {
  content: "2";
  display: block;
}

.howitworks li:nth-child(3) h3:before {
  content: "3";
  display: block;
}

.howitworks li:nth-child(4) h3:before {
  content: "4";
  display: block;
}

.howitworks li:nth-child(5) h3:before {
  content: "5";
  display: block;
}
/* ... */

